# screencapture

./: Cargo.toml  README.md  install.sh
cli/: Cargo.toml  build.rs
cli/src/: main.rs
cli/ui/: index.html  package-lock.json  package.json
cli/ui/src/: App.tsx  index.css
proto/: Cargo.toml  build.rs
proto/proto/: screencapture.proto
proto/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
