[package]
name = "screencapture"
version = "0.1.0"
edition = "2021"

[dependencies]
xcap = "0.6"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
device_query = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }
tonic = "0.11"
prost = "0.12"
proto = { path = "../proto" }
