[package]
name = "screencapture"
version = "0.1.0"
edition = "2021"

[dependencies]
xcap = "0.6"
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = "0.11"
prost = "0.12"
axum = "0.6"
uuid = { version = "1.8", features = ["v4"] }
rust-embed = "8.2.0"
mime_guess = "2.0.4"
proto = { path = "../proto" }

[build-dependencies]

